--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,11 @@ yarn-debug.log*
 yarn-error.log*
 
 # env files (can opt-in for commiting if needed)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 
 # vercel
