--- a/.gitignore
+++ b/.gitignore
@@ -29,13 +29,12 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# env files (can opt-in for commiting if needed)
+# env files
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-
 
 # vercel
 .vercel
